--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
@@ -37,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
