--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
-    "@mui/x-date-pickers": "^7.23.3",
+    "@mui/x-date-pickers": "^7.24.1",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-calendar": "^5.1.0",
